Add flex placement and flex direction to column for body. Add flex placement and flex-wrap for grid container and height width

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,14 @@
 
 body {
   text-align: center;
-
   margin-bottom: 5px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  gap: 16px;
 }
 
 .controls-container {
@@ -25,4 +31,12 @@ button {
   margin: 5px;
   border-radius: 15px;
   font-size: large;
+}
+
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+
+  height: 320px;
+  width: 320px;
 }
