--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 * {
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  -webkit-user-drag: none;
 }
 
 body {
   text-align: center;
   margin-bottom: 5px;
+  background-color: #add8e6;
 
   display: flex;
   justify-content: center;
@@ -24,13 +26,16 @@ body {
   gap: 16px;
 }
 
-button {
+button,
+input {
   width: 100px;
   height: 50px;
 
   margin: 5px;
   border-radius: 15px;
   font-size: large;
+
+  cursor: pointer;
 }
 
 .grid-container {
@@ -40,4 +45,34 @@ button {
   /* based on 20px grid cell */
   height: 480px;
   width: 480px;
+}
+
+.button__divCount {
+  font-size: small;
+}
+
+#colorPicker {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+#colorPicker::-webkit-color-swatch {
+  border-radius: 15px;
+  border: none;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.footer {
+  justify-self: flex-end;
 }
